--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.org/"
+baseurl = "https://vloginov.github.io/blog/"
 languageCode = "ru"
 title = "Steam - a minimal theme for Hugo"
 theme = "hugo-steam-theme"
